[package]
name = "rust-paper"
version = "0.1.2"
edition = "2021"
categories = ["command-line-utilities", "parsing", "parser-implementations", "asynchronous", "no-std"]
description = "Rust Wallpaper manager from ( https://wallhaven.cc/ ) for Linux/UNIX only"
documentation = "https://github.com/falcon71181/rust-paper/blob/main/README.md"
readme = "README.md"
authors = ["falcon71181"]
keywords = ["cli", "Wallpaper", "wallhaven", "Wallpaper-manager", "wall-paper"]
repository = "https://github.com/falcon71181/rust-paper"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive"] }
confy = "0.6.1"
dirs = "5.0.1"
futures = "0.3.31"
image = "0.25.1"
indicatif = "0.18.3"
regex = "1.12.3"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size
